# python-wordle

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: target_words.json  valid_words.json
src/: main.py
src/game/: wordle.py
src/ui/: display.py  game_ui.py
src/utils/: config.py  word_list.py
tests/: test_wordle.py
