[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-wordle"
version = "0.1.0"
description = "A Python implementation of the popular Wordle game"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Harrison Charlesworth", email = "83391874+harrisoncharlesworth@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pylint>=3.0.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
]

[project.urls]
Homepage = "https://github.com/harrisoncharlesworth/python-wordle"
Repository = "https://github.com/harrisoncharlesworth/python-wordle.git"
Issues = "https://github.com/harrisoncharlesworth/python-wordle/issues"

[project.scripts]
wordle = "src.main:app"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"] 